Hotfix: blue/green 배포를 위한 healthCheck API 추가